# fugashi-plus

./: CITATION.cff  Dockerfile  MANIFEST.in  README.md  fugashi_util.py  pyproject.toml  setup.cfg  setup.py
.github/: macos-build.sh
.github/workflows/: entrypoint.sh  manylinux1.yml  osx.yml  test_manylinux.yml  windows.yml
fugashi/: cli.py  fugashi.pyi  fugashi.pyx  mecab.pxd
fugashi/tests/: test_nbest.py
