[metadata]
description = Cython wrapper for MeCab
url = https://github.com/tsukumijima/fugashi-plus
author = "Paul O'Leary McCann"
author_email = polm@dampfkraft.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Cython
    Topic :: Text Processing :: Linguistic
    Typing :: Typed

[tool.pytest]
testpaths = "fugashi/tests"
